# trading

./: .gitignore  pyproject.toml
common/: common.py
data/short_straddle/: data.py
data/short_straddle/data/: monthly_expiry.json
strategy/short_straddle/: short_straddle.py
